fixed horizontal scroll

--- a/css/index.css
+++ b/css/index.css
@@ -632,6 +632,10 @@ video {
   border-color: rgb(229 231 235 / var(--tw-divide-opacity));
 }
 
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
 .whitespace-nowrap {
   white-space: nowrap;
 }
